# C_MFTII_study

./: .gitignore  CMakeLists.txt  data.txt
Formula/: valgrind-macos.rb
Stack/: stack (2).c  stack (2)_zadanie.c  stack _zadanie.c  stack(3).c  stack.c
Zadaniya/1 задание/: 1 задание.c
Zadaniya/2 задание/: 2 задание.c
Zadaniya/3 задание/: 3 задание(1 задача).c  3 задание(2 задача).c
Zadaniya/4 задание/: 4 задание.c  4_module.c  4_module.h
Zadaniya/5 задание/: 5 задание(надо поместить функции в модуль).txt  5 задание.c  5_module.c  5_module.h
Zadaniya/6 задание/: 6 задание.c  names.txt
Zadaniya/7 задание/: 7 задание.c  data.txt
Zadaniya/8 задание/: 8 задание.c
Zadaniya/8_zadanie/: 8_zadanie.c
bkv/Lab7/: C (1).c  C.sh  READme.txt  c.c  makelib  matrix.h  sig.c  test.c
bkv/Lab7/CCSD/: example_2.cif
bkv/Lab7/matrx042/: demo.c  matadd.c  matcreat.c  matdet.c  matdump.c  matdurbn.c  materr.c  matinv.c  matmul.c  matrix.h  matrix.txt  matsolve.c  matsub.c  matsubx.c  mattoepz.c  mattran.c  read.me
bkv/Lab7/molecules/: 1.mol2  2.mol2  ABABEL.mol2  CITARC.mol2  SAHYOQ02.mol2  SUCROS01.mol2  TMCOTT.mol2  adaman  benzimid  hemaglobin  hfuran  indole  isomerase  pdb3j37.ent.at  phe  transdec
bkv/Lab7/Библиотека для работы с матрицами/: makelib  maketest  matcreat.c  matcreat4.h  matdet.c_  matdump.c  materr.c  matmul.c  matsub.c
bkv/lab1/: count.c
bkv/lab2/: 5211-8.txt  5251-8.txt  5253.txt  Readme.txt
bkv/lab2/тексты/: 12chairs.txt  1letter.txt  3_on_4.txt  40_BOCHE.txt  7_kesson.txt  BENDROM.txt  (+235 more)
hello/: hello.c
list/: list1.c  list2.c  list3.c
(+16 files in other folders)
