cmake_minimum_required(VERSION 3.23)
project(C_MFTII_study C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(C_MFTII_study
        #First.c
        #hello/hello.c
        #Stack/stack.c 
        #"Stack/stack (2).c" "Stack/stack (2)_zadanie.c" 
        #"Stack/stack(3).c")
        #"list/list2.c" 
        #"list/list1.c" 
        #"list/list3.c" 
        #"Zadaniya/8_zadanie/8_zadanie.c" 
        "bkv/lab1/count.c" "bkv/lab2/templ1251.c" "bkv/lab2/timeval_.c" "bkv/lab2/timeval.c" "bkv/lab2/templ.c")








